Chapter 1 — Listing 1.3: ProductTraditional.java Demonstrates: traditional verbose POJO with explicit constructor, getters,